# ppi-airflow

./: .gitignore  docker-compose.yml  mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: dag_factory.md  service.md  service_builder.md  service_factory.md
docs/stylesheets/: extra.css
ppi_airflow/airflow/: __init__.py  dag_factory.py
ppi_airflow/core/errors/: no_project_error.py
ppi_airflow/core/services/: __init__.py  builder.py  factory.py  postgre_connection_service.py  provider.py  service.py  service_builder.py  service_factory.py
ppi_airflow/dags/teste-1/: DAG.py
ppi_airflow/projects/connectors/: __init__.py  postgres_connection.py  postgres_funds_uat.py  sqlserver_funds_uat.py
ppi_airflow/services/: factory.py  provider.py  service.py
scripts/: install_airflow.sh
tests/tests_dag_factory/: test_dag_factory.py
