[tool.poetry]
name = "ppi-airflow"
version = "0.1.0"
description = ""
authors = ["Tiago Henrique <tiago.henrique@picpay.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.11.6,<3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"
pytest-mock = "^3.12.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.10"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"
[tool.isort]
profile = "black"
line_length = 79 
[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve" 
pre_test = "task lint"
test = "pytest -s -x --cov=ppi_airflow -vv"
post_test = "coverage html"
